# bump-manifest-json

./: Cargo.toml  README.md  manifest.json
src/: git.rs  main.rs  parser.rs
