[package]
name = "manifest-bump"
version = "0.2.1"
edition = "2018"
readme = "README.md"
license = "MIT"
authors = ["SSlime-s <62363188+SSlime-s@users.noreply.github.com>"]
description = "Bump the version of a manifest.json"
keywords = ["manifest", "bump", "json"]
repository = "https://github.com/SSlime-s/bump-manifest-json"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
once_cell = "1.8"
regex = "1.5"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
